--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,10 @@
 
 S3method(print,plmed)
 export(CUE_vec_J_bin)
+export(G_estimation)
 export(IF.glm)
 export(TTS)
+export(fit.G_estimation)
 export(fit.TTS)
-export(fit.plmed)
 export(newton_raph)
 export(plmed)
