--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(print,plmed)
 export(CUE_vec_J_bin)
 export(G_estimation)
 export(IF.glm)
+export(OLS)
 export(TTS)
 export(fit.G_estimation)
 export(fit.TTS)
